--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Error-area{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.Error-stack{
+  margin: 5px 25px;
+}
